--- a/README.adoc
+++ b/README.adoc
@@ -3,11 +3,13 @@
 :version: 0.3.0
 
 image:https://travis-ci.org/GoodGrind/ghostwriter-api.svg?branch=master["Build Status", link="https://travis-ci.org/GoodGrind/ghostwriter-api"]
+image:https://api.codacy.com/project/badge/Grade/ced3cbe5b44d4f5bbae39140913a69a4["Codacy Badge", link="https://www.codacy.com/app/snorbi07/ghostwriter-api"]
 image:https://maven-badges.herokuapp.com/maven-central/io.ghostwriter/ghostwriter-api-java/badge.svg["Maven Central", link="http://search.maven.org/#search%7Cga%7C1%7Cg%3A%22io.ghostwriter%22%20v%3A{version}"]
 image:https://img.shields.io/badge/license-LGPLv2.1-blue.svg?style=flat["License", link="http://www.gnu.org/licenses/old-licenses/lgpl-2.1.html"]
 
+
 == About
-The ghostwriter-api provides a set of callbacks that get executed for specific events triggered by your application, such as:
+The _ghostwriter-api_ provides a set of callbacks that get executed for specific events triggered by your application, such as:
 
 * calling a function or procedure
 * assignment to a field or variable
